homebox/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebox-deployment
spec:
  selector:
    matchLabels:
      app: homebox
  replicas: 1
  template:
    metadata:
      labels:
        app: homebox
    spec:
      containers:
      - name: homebox
        image: ghcr.io/hay-kot/homebox:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 7745
        volumeMounts:
        - mountPath: /data
          name: homebox-data
      volumes:
      - name: homebox-data
        nfs:
          server: 10.10.9.14
          path: "/mnt/Storage/apps/homebox"
      tolerations:
      - key: "nvidia.com/gpu"
        operator: "Exists"
        effect: "NoSchedule"
