homebox/svc-tcp.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homebox-service
spec:
  selector:
    app: homebox
  ports:
    - name: homebox-web
      port: 80
      targetPort: 7745
      protocol: TCP
